contec_hacking/research/additional_samples/Additional sample program  Analog Input Repeat Ver.1.00/AiRepeat/Sample/eng/VbNet2013/AiRepeat/Caio.vb


    'Analog Input Function
    Declare Function AioSingleAi Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef AiData As Integer) As Integer
    Declare Function AioSingleAiEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef AiData As Single) As Integer
    Declare Function AioMultiAi Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannels As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal AiData() As Integer) As Integer
    Declare Function AioMultiAiEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannels As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal AiData() As Single) As Integer
    Declare Function AioSingleAiSR Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef AiData As Integer, ByRef Timestamp As UShort, ByVal Mode As Byte) As Integer
    Declare Function AioSingleAiExSR Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef AiData As Single, ByRef Timestamp As UShort, ByVal Mode As Byte) As Integer
    Declare Function AioMultiAiSR Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannels As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal AiData() As Integer, ByRef Timestamp As UShort, ByVal Mode As Byte) As Integer
    Declare Function AioMultiAiExSR Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannels As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal AiData() As Single, ByRef Timestamp As UShort, ByVal Mode As Byte) As Integer
    Declare Function AioGetAiMaxChannels Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiMaxChannels As Short) As Integer
    Declare Function AioGetAiResolution Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiResolution As Short) As Integer
    Declare Function AioSetAiInputMethod Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiInputMethod As Short) As Integer
    Declare Function AioGetAiInputMethod Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiInputMethod As Short) As Integer
    Declare Function AioSetAiChannel Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannels As Short, ByVal Enabled As Short) As Integer
    Declare Function AioGetAiChannel Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannels As Short, ByRef Enabled As Short) As Integer
    Declare Function AioSetAiChannels Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannels As Short) As Integer
    Declare Function AioGetAiChannels Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiChannels As Short) As Integer
    Declare Function AioSetAiChannelSequence Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiSequence As Short, ByVal AiChannel As Short) As Integer
    Declare Function AioGetAiChannelSequence Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiSequence As Short, ByRef AiChannel As Short) As Integer
    Declare Function AioSetAiRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal AiRange As Short) As Integer
    Declare Function AioGetAiRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef AiRange As Short) As Integer
    Declare Function AioSetAiTransferMode Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiTransferMode As Short) As Integer
    Declare Function AioGetAiTransferMode Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiTransferMode As Short) As Integer
    Declare Function AioSetAiDeviceBufferMode Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiDeviceBufferMode As Short) As Integer
    Declare Function AioGetAiDeviceBufferMode Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiDeviceBufferMode As Short) As Integer
    Declare Function AioSetAiMemorySize Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiMemorySize As Integer) As Integer
    Declare Function AioGetAiMemorySize Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiMemorySize As Integer) As Integer
    Declare Function AioSetAiTransferData Lib "CAIO.DLL" (ByVal Id As Short, ByVal DataNumber As Integer, ByVal Buffer As IntPtr) As Integer
    Declare Function AioSetAiAttachedData Lib "CAIO.DLL" (ByVal Id As Short, ByVal AttachedData As Integer) As Integer
    Declare Function AioGetAiSamplingDataSize Lib "CAIO.DLL" (ByVal Id As Short, ByRef DataSize As Short) As Integer
    Declare Function AioSetAiRangeAll Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiRange As Short) As Integer
    Declare Function AioSetAiMemoryType Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiMemoryType As Short) As Integer
    Declare Function AioGetAiMemoryType Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiMemoryType As Short) As Integer
    Declare Function AioSetAiRepeatTimes Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiRepeatTimes As Integer) As Integer
    Declare Function AioGetAiRepeatTimes Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiRepeatTimes As Integer) As Integer
    Declare Function AioSetAiClockType Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiClockType As Short) As Integer
    Declare Function AioGetAiClockType Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiClockType As Short) As Integer
    Declare Function AioSetAiSamplingClock Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiSamplingClock As Single) As Integer
    Declare Function AioGetAiSamplingClock Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiSamplingClock As Single) As Integer
    Declare Function AioSetAiScanClock Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiScanClock As Single) As Integer
    Declare Function AioGetAiScanClock Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiScanClock As Single) As Integer
    Declare Function AioSetAiClockEdge Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiClockEdge As Short) As Integer
    Declare Function AioGetAiClockEdge Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiClockEdge As Short) As Integer
    Declare Function AioSetAiStartTrigger Lib "CAIO.DLL" (ByVal Id As Short, ByVal AIStartTrigger As Short) As Integer
    Declare Function AioGetAiStartTrigger Lib "CAIO.DLL" (ByVal Id As Short, ByRef AIStartTrigger As Short) As Integer
    Declare Function AioSetAiStartLevel Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal AiStartLevel As Integer, ByVal AiDirection As Short) As Integer
    Declare Function AioSetAiStartLevelEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal AiStartLevel As Single, ByVal AiDirection As Short) As Integer
    Declare Function AioGetAiStartLevel Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef AiStartLevel As Integer, ByRef AiDirection As Short) As Integer
    Declare Function AioGetAiStartLevelEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef AiStartLevel As Single, ByRef AiDirection As Short) As Integer
    Declare Function AioSetAiStartInRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal Level1 As Integer, ByVal Level2 As Integer, ByVal StateTimes As Integer) As Integer
    Declare Function AioSetAiStartInRangeEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal Level1 As Single, ByVal Level2 As Single, ByVal StateTimes As Integer) As Integer
    Declare Function AioGetAiStartInRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef Level1 As Integer, ByRef Level2 As Integer, ByRef StateTimes As Integer) As Integer
    Declare Function AioGetAiStartInRangeEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef Level1 As Single, ByRef Level2 As Single, ByRef StateTimes As Integer) As Integer
    Declare Function AioSetAiStartOutRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal Level1 As Integer, ByVal Level2 As Integer, ByVal StateTimes As Integer) As Integer
    Declare Function AioSetAiStartOutRangeEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal Level1 As Single, ByVal Level2 As Single, ByVal StateTimes As Integer) As Integer
    Declare Function AioGetAiStartOutRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef Level1 As Integer, ByRef Level2 As Integer, ByRef StateTimes As Integer) As Integer
    Declare Function AioGetAiStartOutRangeEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef Level1 As Single, ByRef Level2 As Single, ByRef StateTimes As Integer) As Integer
    Declare Function AioSetAiStopTrigger Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiStopTrigger As Short) As Integer
    Declare Function AioGetAiStopTrigger Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiStopTrigger As Short) As Integer
    Declare Function AioSetAiStopTimes Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiStopTimes As Integer) As Integer
    Declare Function AioGetAiStopTimes Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiStopTimes As Integer) As Integer
    Declare Function AioSetAiStopLevel Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal AiStopLevel As Integer, ByVal AiDirection As Short) As Integer
    Declare Function AioSetAiStopLevelEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal AiStopLevel As Single, ByVal AiDirection As Short) As Integer
    Declare Function AioGetAiStopLevel Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef AiStopLevel As Integer, ByRef AiDirection As Short) As Integer
    Declare Function AioGetAiStopLevelEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef AiStopLevel As Single, ByRef AiDirection As Short) As Integer
    Declare Function AioSetAiStopInRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal Level1 As Integer, ByVal Level2 As Integer, ByVal StateTimes As Integer) As Integer
    Declare Function AioSetAiStopInRangeEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal Level1 As Single, ByVal Level2 As Single, ByVal StateTimes As Integer) As Integer
	Declare Function AioGetAiStopInRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef Level1 As Integer, ByRef Level2 As Integer, ByRef StateTimes As Integer) As Integer
	Declare Function AioGetAiStopInRangeEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef Level1 As Single, ByRef Level2 As Single, ByRef StateTimes As Integer) As Integer
	Declare Function AioSetAiStopOutRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal Level1 As Integer, ByVal Level2 As Integer, ByVal StateTimes As Integer) As Integer
	Declare Function AioSetAiStopOutRangeEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal Level1 As Single, ByVal Level2 As Single, ByVal StateTimes As Integer) As Integer
	Declare Function AioGetAiStopOutRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef Level1 As Integer, ByRef Level2 As Integer, ByRef StateTimes As Integer) As Integer
	Declare Function AioGetAiStopOutRangeEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef Level1 As Single, ByRef Level2 As Single, ByRef StateTimes As Integer) As Integer
	Declare Function AioSetAiStopDelayTimes Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiStopDelayTimes As Integer) As Integer
	Declare Function AioGetAiStopDelayTimes Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiStopDelayTimes As Integer) As Integer
	Declare Function AioSetAiEvent Lib "CAIO.DLL" (ByVal Id As Short, ByVal hWnd As Integer, ByVal AiEvent As Integer) As Integer
	Declare Function AioGetAiEvent Lib "CAIO.DLL" (ByVal Id As Short, ByRef hWnd As Integer, ByRef AiEvent As Integer) As Integer
    Declare Function AioSetAiCallBackProc Lib "CAIO.DLL" (ByVal Id As Short, ByVal PAICALLBACK As IntPtr, ByVal AiEvent As Integer, ByVal Param As IntPtr) As Integer
	Declare Function AioSetAiEventSamplingTimes Lib "CAIO.DLL" (ByVal Id As Short, ByVal AIEventSamplingTimes As Integer) As Integer
	Declare Function AioGetAiEventSamplingTimes Lib "CAIO.DLL" (ByVal Id As Short, ByRef AIEventSamplingTimes As Integer) As Integer
	Declare Function AioSetAiEventTransferTimes Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiTransferTimes As Integer) As Integer
	Declare Function AioGetAiEventTransferTimes Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiTransferTimes As Integer) As Integer
	Declare Function AioSetAiCondition Lib "CAIO.DLL" (ByVal Id As Short) As Integer
	Declare Function AioStartAi Lib "CAIO.DLL" (ByVal Id As Short) As Integer
